--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <div id="ja">Loading...</div>
   <div id="en"></div>
   <button id="revealBtn">Reveal / Next</button>
-  <a id="translateLink" href="#" target="_blank" title="Open in Google Translate">🌐</a>
+  <a id="translateLink" href="#" target="_blank" title="Open in Google Translate">🔈</a>
   <div id="progress"></div>
   <div id="log"></div>
   <button id="settingsBtn" onclick="showSettings()">⚙️</button>
