--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- WaniKani Sentence Practice App - Updated HTML -->
+<!-- WaniKani Sentence Practice App - With Selectable Audio Mode -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,65 +7,23 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=M+PLUS+1p&family=Noto+Sans+JP&family=Zen+Kaku+Gothic+New&family=Yuji+Boku&display=swap');
 
-    body {
-      font-family: sans-serif;
-      text-align: center;
-      padding: 2em;
-    }
-    #settingsBtn {
-      position: absolute;
-      top: 1em;
-      right: 1em;
-      background: none;
-      border: none;
-      font-size: 1.5em;
-      cursor: pointer;
-    }
-    #ja, #en {
-      font-size: 2.5em;
-      margin: 1em;
-    }
-    #en {
-      display: none;
-      color: gray;
-    }
-    #progress, #log {
-      margin-top: 1em;
-      font-size: 1em;
-      color: #666;
-    }
+    body { font-family: sans-serif; text-align: center; padding: 2em; }
+    #settingsBtn { position: absolute; top: 1em; right: 1em; background: none; border: none; font-size: 1.5em; cursor: pointer; }
+    #ja, #en { font-size: 2.5em; margin: 1em; }
+    #en { display: none; color: gray; }
+    #progress, #log { margin-top: 1em; font-size: 1em; color: #666; }
     .font-kosugi { font-family: 'Kosugi Maru', sans-serif; }
     .font-mplus  { font-family: 'M PLUS 1p', sans-serif; }
     .font-noto   { font-family: 'Noto Sans JP', sans-serif; }
     .font-zen    { font-family: 'Zen Kaku Gothic New', sans-serif; }
     .font-boku   { font-family: 'Yuji Boku', serif; }
+    button { font-size: 1em; padding: 0.5em 1em; margin: 1em; }
 
-    button {
-      font-size: 1em;
-      padding: 0.5em 1em;
-      margin: 1em;
-    }
-
-    #settingsDialog {
-      display: none;
-      position: fixed;
-      top: 20%;
-      left: 50%;
-      transform: translateX(-50%);
-      background: #fff;
-      border: 1px solid #ccc;
-      padding: 1.5em;
-      z-index: 10;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-    }
-
-    #overlay {
-      display: none;
-      position: fixed;
-      top: 0; left: 0; width: 100%; height: 100%;
-      background: rgba(0,0,0,0.3);
-      z-index: 5;
-    }
+    #settingsDialog { display: none; position: fixed; top: 20%; left: 50%; transform: translateX(-50%);
+      background: #fff; border: 1px solid #ccc; padding: 1.5em; z-index: 10;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2); }
+    #overlay { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+      background: rgba(0,0,0,0.3); z-index: 5; }
   </style>
 </head>
 <body>
@@ -73,7 +31,7 @@
   <div id="ja">Loading...</div>
   <div id="en"></div>
   <button id="revealBtn">Reveal / Next</button>
-  <a id="translateLink" href="#" target="_blank" title="Open in Google Translate" style="font-size: 1.5em; text-decoration: none;">🔈</a>
+  <button id="audioBtn" title="Play audio" style="font-size: 0.8em; margin: 0 0.5em; text-decoration: none;">🔈</button>
   <div id="progress"></div>
   <div id="log"></div>
   <button id="settingsBtn" onclick="showSettings()">⚙️</button>
@@ -85,12 +43,18 @@
     <label>Start (min) day offset: <input id="minDays" type="number" min="0" max="30" /></label><br><br>
     <label>End (max) day offset: <input id="maxDays" type="number" min="1" max="30" /></label><br><br>
     <label>WaniKani API Key: <input id="apiKeyInput" type="text" /></label><br><br>
+    <label>Audio Mode:
+      <select id="audioMode">
+        <option value="local">Local Text-to-speach</option>
+        <option value="translate">Google Translate</option>
+      </select>
+    </label><br><br>
     <button onclick="saveSettings()">Save</button>
     <button onclick="hideSettings()">Cancel</button>
   </div>
 
   <script>
-    const defaultSettings = { minDays: 1, maxDays: 7 };
+    const defaultSettings = { minDays: 1, maxDays: 7, audioMode: "translate" };
     let settings = JSON.parse(localStorage.getItem("settings") || JSON.stringify(defaultSettings));
 
     let API_TOKEN = localStorage.getItem("wanikani_api_token");
@@ -99,13 +63,12 @@
       if (API_TOKEN && API_TOKEN.trim() !== "") {
         localStorage.setItem("wanikani_api_token", API_TOKEN);
       } else {
-        alert("API key is required. Reload the page and enter it when prompted.");
+        alert("API key is required. Reload and enter it when prompted.");
         throw new Error("No API key provided");
       }
     }
 
     const headers = { "Authorization": `Bearer ${API_TOKEN}` };
-
     const weightedFonts = [
       { class: 'font-kosugi', weight: 0.22 },
       { class: 'font-mplus',  weight: 0.22 },
@@ -123,12 +86,8 @@
     }
 
     function weightedRandomFont() {
-      const r = Math.random();
-      let sum = 0;
-      for (const f of weightedFonts) {
-        sum += f.weight;
-        if (r < sum) return f.class;
-      }
+      const r = Math.random(); let sum = 0;
+      for (const f of weightedFonts) { sum += f.weight; if (r < sum) return f.class; }
       return weightedFonts[weightedFonts.length - 1].class;
     }
 
@@ -144,7 +103,6 @@
       const now = new Date();
       const after = new Date(now.getTime() + settings.minDays * 86400000);
       const before = new Date(now.getTime() + settings.maxDays * 86400000);
-
       const url = new URL("https://api.wanikani.com/v2/assignments");
       url.searchParams.set("subject_types", "vocabulary");
       url.searchParams.set("available_after", after.toISOString());
@@ -152,28 +110,22 @@
       url.searchParams.set("burned", "false");
       url.searchParams.set("hidden", "false");
 
-      const assignments = await fetch(url.toString(), { headers }).then(res => res.json());
+      const assignments = await fetch(url, { headers }).then(res => res.json());
       const ids = assignments.data.map(a => a.data.subject_id);
-
       const subjectDetails = [];
+
       for (let i = 0; i < ids.length; i += 100) {
-        const batch = ids.slice(i, i + 100).join(',');
-        const subjects = await fetch(`https://api.wanikani.com/v2/subjects?ids=${batch}`, { headers }).then(res => res.json());
+        const batch = ids.slice(i, i + 100).join(",");
+        const subjects = await fetch(`https://api.wanikani.com/v2/subjects?ids=${batch}`, { headers }).then(r => r.json());
         subjectDetails.push(...subjects.data.filter(s => s.object === "vocabulary"));
       }
 
       const seenToday = getTodaySeenSentences();
-
       vocabQueue = subjectDetails.map(v => {
-        const sentences = v.data.context_sentences;
-        const rand = Math.floor(Math.random() * sentences.length);
-        return {
-          vocab_id: v.id,
-          characters: v.data.characters,
-          ja: sentences[rand].ja,
-          en: sentences[rand].en
-        };
-      }).filter(item => !seenToday.has(item.ja));
+        const s = v.data.context_sentences;
+        const rand = Math.floor(Math.random() * s.length);
+        return { vocab_id: v.id, characters: v.data.characters, ja: s[rand].ja, en: s[rand].en };
+      }).filter(i => !seenToday.has(i.ja));
 
       vocabQueue = shuffleArray(vocabQueue);
       total = vocabQueue.length;
@@ -185,12 +137,27 @@
       document.getElementById("progress").innerText = `Progress: ${done} / ${total}`;
     }
 
+    function speakLocal(text) {
+      const utter = new SpeechSynthesisUtterance(text);
+      utter.lang = "ja-JP";
+      speechSynthesis.speak(utter);
+    }
+
+    function playAudio() {
+      if (!current) return;
+      if (settings.audioMode === "translate") {
+        const url = `https://translate.google.com/?sl=ja&tl=en&text=${encodeURIComponent(current.ja)}&op=translate`;
+        window.open(url, "_blank");
+      } else {
+        speakLocal(current.ja);
+      }
+    }
+
     function nextSentence() {
       if (vocabQueue.length === 0) {
         document.getElementById("ja").innerText = "Done for now!";
         document.getElementById("en").innerText = "";
         document.getElementById("progress").innerText = "";
-        document.getElementById("translateLink").style.display = "none";
         return;
       }
       current = vocabQueue.shift();
@@ -200,8 +167,6 @@
       jaDiv.innerText = current.ja;
       document.getElementById("en").innerText = current.en;
       document.getElementById("en").style.display = "none";
-      document.getElementById("translateLink").href = `https://translate.google.com/?sl=ja&tl=en&text=${encodeURIComponent(current.ja)}&op=translate`;
-      document.getElementById("translateLink").style.display = "inline-block";
       updateProgress();
     }
 
@@ -224,15 +189,17 @@
     }
 
     document.getElementById("revealBtn").addEventListener("click", () => handleAdvance(true));
-    document.addEventListener("keydown", (e) => {
+    document.getElementById("audioBtn").addEventListener("click", playAudio);
+    document.addEventListener("keydown", e => {
       if (e.key === " ") { e.preventDefault(); handleAdvance(true); }
-      else if (e.key === "1") { handleAdvance(false); }
+      else if (e.key === "1") handleAdvance(false);
     });
 
     function showSettings() {
       document.getElementById("minDays").value = settings.minDays;
       document.getElementById("maxDays").value = settings.maxDays;
       document.getElementById("apiKeyInput").value = API_TOKEN || "";
+      document.getElementById("audioMode").value = settings.audioMode || "translate";
       document.getElementById("overlay").style.display = "block";
       document.getElementById("settingsDialog").style.display = "block";
     }
@@ -245,12 +212,11 @@
     function saveSettings() {
       settings.minDays = parseInt(document.getElementById("minDays").value, 10);
       settings.maxDays = parseInt(document.getElementById("maxDays").value, 10);
+      settings.audioMode = document.getElementById("audioMode").value;
       localStorage.setItem("settings", JSON.stringify(settings));
 
       const newKey = document.getElementById("apiKeyInput").value.trim();
-      if (newKey) {
-        localStorage.setItem("wanikani_api_token", newKey);
-      }
+      if (newKey) localStorage.setItem("wanikani_api_token", newKey);
 
       hideSettings();
       location.reload();
@@ -260,4 +226,3 @@
   </script>
 </body>
 </html>
-
